--- a/projectgeneral/templates/index.html
+++ b/projectgeneral/templates/index.html
@@ -149,35 +149,21 @@
                     <div class="offcanvas-menu">
                         <nav>
                             <ul>
-                                <li class="menu-item-has-children"><a href="index">Home</a>
+                                <li class="menu-item-has-children"><a href="http://localhost:8000/">Home</a>
                                     <ul class="sub-menu">
-                                        <li><a href="index">Homepage 01</a></li>
+                                        <li><a href="http://localhost:8000">Homepage 01</a></li>
                                         <li><a href="index-2">Homepage 02</a></li>
                                         <li><a href="index-3">Homepage 03</a></li>
                                         <li><a href="index-4">Homepage 04</a></li>
                                         <li><a href="index-5">Homepage 05</a></li>
                                     </ul>
                                 </li>
-                                <li class="menu-item-has-children"><a href="practice-areas-1">Practice Areas</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="practice-areas-1">Practice Areas 01</a></li>
-                                        <li><a href="practice-areas-2">Practice Areas 02</a></li>
-                                        <li><a href="practice-areas-3">Practice Areas 03</a></li>
-                                        <li><a href="practice-areas-4">Practice Areas 04</a></li>
-                                        <li><a href="practice-bank-financial">Bank & Financial</a></li>
-                                        <li><a href="practice-capital-market">Capital Market</a></li>
-                                        <li><a href="practice-car-accident">Car Accident</a></li>
-                                        <li><a href="practice-corporate">Corporate</a></li>
-                                        <li><a href="practice-employment-law">Employment Law</a></li>
-                                        <li><a href="practice-family-law">Family Law</a></li>
-                                        <li><a href="practice-personal-injury">Personal Injury</a></li>
-                                    </ul>
-                                </li>
+                                
                                 <li><a href="case-results">Case Results</a></li>
                                 <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                     <ul class="sub-menu">
-                                        <li><a href="attorneys">Attorneys</a></li>
-                                        <li><a href="single-attorney">Single Attorney</a></li>
+                                        <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
+                                        <li><a href="http://localhost:8000/singleattorney">Single Attorney</a></li>
                                         <li><a href="honnors-and-awards">Honnors And Awards</a></li>
                                         <li><a href="careers">Careers</a></li>
                                     </ul>
@@ -191,10 +177,10 @@
                                 </li>
                                 <li class="menu-item-has-children"><a href="shop">Shop</a>
                                     <ul class="sub-menu">
-                                        <li><a href="shop">Shop</a></li>
+                                        <li><a href="http://localhost:8000/shop">Shop</a></li>
                                         <li><a href="shop-2-column">Shop 2 Column</a></li>
-                                        <li><a href="product-details">Product Details</a></li>
-                                        <li><a href="cart">Shopping Cart</a></li>
+                                        <li><a href="http://localhost:8000/productdetail">Product Details</a></li>
+                                        <li><a href="http://localhost:8000/cart">Shopping Cart</a></li>
                                         <li><a href="checkout">Checkout</a></li>
                                         <li><a href="login-register">Login & Register</a></li>
                                         <li><a href="my-account">My Account</a></li>
@@ -203,10 +189,10 @@
                                 </li>
                                 <li class="menu-item-has-children"><a href="#">Pages</a>
                                     <ul class="sub-menu">
-                                        <li><a href="about-us">About us</a></li>
-                                        <li><a href="contact-us-1">Contact us 1</a></li>
+                                        <li><a href="http://localhost:8000/about">About us</a></li>
+                                        <li><a href="http://localhost:8000/contact">Contact us 1</a></li>
                                         <li><a href="contact-us-2">Contact us 2</a></li>
-                                        <li><a href="faq">F.A.Q</a></li>
+                                        <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
                                         <li><a href="gallery">Gallery</a></li>
                                     </ul>
                                 </li>
@@ -257,7 +243,7 @@
                     <h4 class="sub-title wow fadeInLeft" data-wow-delay="1.2s">Lawyer Attorneys is the best</h4>
                     <h2 class="title wow fadeInUp" data-wow-delay="1.7s">Law firm in london</h2>
                     <p class="desc wow fadeInDown" data-wow-delay="2.2s">Human & Rights has been helping the seriously injured.</p>
-                    <a href="about-us" class="btn btn-primary wow fadeInUp" data-wow-delay="2.7s">Learn More</a>
+                    <a href="http://localhost:8000/about" class="btn btn-primary wow fadeInUp" data-wow-delay="2.7s">Learn More</a>
                 </div>
                 <!--Hero Content End-->
 
@@ -272,7 +258,7 @@
                     <span class="content-bg-overlay wow fadeInUp" data-wow-delay="0.5s"></span>
                     <h2 class="title wow fadeInLeft" data-wow-delay="1s">Experienced <span>Attorneys</span></h2>
                     <p class="desc wow fadeInRight" data-wow-delay="1.5s">Human & Rights has been helping the seriously injured.</p>
-                    <a href="about-us" class="btn btn-primary wow fadeInUp" data-wow-delay="2s">Learn More</a>
+                    <a href="http://localhost:8000/about" class="btn btn-primary wow fadeInUp" data-wow-delay="2s">Learn More</a>
                 </div>
                 <!--Hero Content End-->
 
@@ -285,7 +271,7 @@
                 <!--Hero Content Start-->
                 <div class="hero-content hero-content-3">
                     <h2 class="title wow zoomIn" data-wow-delay="0.5s">London law <span>firm</span>, <br><span>Works</span> for justice</h2>
-                    <a href="about-us" class="btn btn-primary wow fadeInUp" data-wow-delay="1s">Learn More</a>
+                    <a href="http://localhost:8000/about" class="btn btn-primary wow fadeInUp" data-wow-delay="1s">Learn More</a>
                 </div>
                 <!--Hero Content End-->
 
@@ -569,12 +555,12 @@
                     <!--Attorney Start-->
                     <div class="col-lg-4 col-sm-6 col-12 mb-30">
                         <div class="team text-center">
-                            <a href="single-attorney" class="team-image"><img src="{% static 'assets/images/team/team-1.jpg' %}" alt=""></a>
+                            <a href="http://localhost:8000/singleattorney" class="team-image"><img src="{% static 'assets/images/team/team-1.jpg' %}" alt=""></a>
                             <div class="team-content">
                                 <h3 class="name">Kellan Dust</h3>
                                 <span class="title">BANK & FINANCIAL LAWYER</span>
                                 <p class="desc">Kellan Dust is known as a tenacious fighter who protects his client’s rights as though they are his own.</p>
-                                <a href="single-attorney" class="read-more">Read Profile</a>
+                                <a href="http://localhost:8000/singleattorney" class="read-more">Read Profile</a>
                             </div>
                         </div>
                     </div>
@@ -583,12 +569,12 @@
                     <!--Attorney Start-->
                     <div class="col-lg-4 col-sm-6 col-12 mb-30">
                         <div class="team text-center">
-                            <a href="single-attorney" class="team-image"><img src="{% static 'assets/images/team/team-2.jpg' %}" alt=""></a>
+                            <a href="http://localhost:8000/singleattorney" class="team-image"><img src="{% static 'assets/images/team/team-2.jpg' %}" alt=""></a>
                             <div class="team-content">
                                 <h3 class="name">Laura Griffin</h3>
                                 <span class="title">FAMILY LAWYER</span>
                                 <p class="desc">Laura Griffin has a track record of recovery in civil matters. She is a protector of individual rights.</p>
-                                <a href="single-attorney" class="read-more">Read Profile</a>
+                                <a href="http://localhost:8000/singleattorney" class="read-more">Read Profile</a>
                             </div>
                         </div>
                     </div>
@@ -597,12 +583,12 @@
                     <!--Attorney Start-->
                     <div class="col-lg-4 col-sm-6 col-12 mb-30">
                         <div class="team text-center">
-                            <a href="single-attorney" class="team-image"><img src="{% static 'assets/images/team/team-3.jpg' %}" alt=""></a>
+                            <a href="http://localhost:8000/singleattorney" class="team-image"><img src="{% static 'assets/images/team/team-3.jpg' %}" alt=""></a>
                             <div class="team-content">
                                 <h3 class="name">Joseph Steward</h3>
                                 <span class="title">BUSINESS LAWYER</span>
                                 <p class="desc">Joseph Steward is an experienced lawyer who has many years dealing with business cases.</p>
-                                <a href="single-attorney" class="read-more">Read Profile</a>
+                                <a href="http://localhost:8000/singleattorney" class="read-more">Read Profile</a>
                             </div>
                         </div>
                     </div>
@@ -912,10 +898,10 @@
                         <ul class="footer-widget-link">
                             <li><a href="practice-areas-1">Practice Areas</a></li>
                             <li><a href="case-results">Case Results</a></li>
-                            <li><a href="about-us">Our Firm</a></li>
+                            <li><a href="http://localhost:8000/about">Our Firm</a></li>
                             <li><a href="careers">Careers</a></li>
-                            <li><a href="faq">F.A.Q</a></li>
-                            <li><a href="contact-us-1">Contact Us</a></li>
+                            <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
+                            <li><a href="http://localhost:8000/contact">Contact Us</a></li>
                         </ul>
                     </div>
                     <!--Footer Widget End-->
