--- a/projectgeneral/templates/product-details.html
+++ b/projectgeneral/templates/product-details.html
@@ -192,8 +192,8 @@
                                 <ul class="sub-menu">
                                     <li><a href="http://localhost:8000/shop.html">Shop</a></li>
                                     <li><a href="shop-2-column.html">Shop 2 Column</a></li>
-                                    <li><a href="product-details.html">Product Details</a></li>
-                                    <li><a href="cart.html">Shopping Cart</a></li>
+                                    <li><a href="http://127.0.0.1:8000/productdetail">Product Details</a></li>
+                                    <li><a href="http://127.0.0.1:8000/cart">Shopping Cart</a></li>
                                     <li><a href="checkout.html">Checkout</a></li>
                                     <li><a href="login-register.html">Login & Register</a></li>
                                     <li><a href="my-account.html">My Account</a></li>
@@ -606,10 +606,10 @@
                         <ul class="footer-widget-link">
                             <li><a href="practice-areas-1.html">Practice Areas</a></li>
                             <li><a href="case-results.html">Case Results</a></li>
-                            <li><a href="about-us.html">Our Firm</a></li>
+                            <li><a href="http://127.0.0.1:8000/about">Our Firm</a></li>
                             <li><a href="careers.html">Careers</a></li>
-                            <li><a href="faq.html">F.A.Q</a></li>
-                            <li><a href="contact-us-1.html">Contact Us</a></li>
+                            <li><a href="http://127.0.0.1:8000/faq">F.A.Q</a></li>
+                            <li><a href="http://127.0.0.1:8000/contact">Contact Us</a></li>
                         </ul>
                     </div>
                     <!--Footer Widget End-->
