--- a/projectgeneral/templates/shop.html
+++ b/projectgeneral/templates/shop.html
@@ -192,8 +192,8 @@
                                     <ul class="sub-menu">
                                         <li><a href="http://localhost:8000/shop.html">Shop</a></li>
                                         <li><a href="shop-2-column.html">Shop 2 Column</a></li>
-                                        <li><a href="product-details.html">Product Details</a></li>
-                                        <li><a href="cart.html">Shopping Cart</a></li>
+                                        <li><a href="http://127.0.0.1:8000/productdetail">Product Details</a></li>
+                                        <li><a href="http://127.0.0.1:8000/cart">Shopping Cart</a></li>
                                         <li><a href="checkout.html">Checkout</a></li>
                                         <li><a href="login-register.html">Login & Register</a></li>
                                         <li><a href="my-account.html">My Account</a></li>
@@ -203,7 +203,7 @@
                                 <li class="menu-item-has-children"><a href="#">Pages</a>
                                     <ul class="sub-menu">
                                         <li><a href="http://localhost:8000/about">About us</a></li>
-                                        <li><a href="contact-us-1.html">Contact us 1</a></li>
+                                        <li><a href="http://127.0.0.1:8000/contact">Contact us 1</a></li>
                                         <li><a href="contact-us-2.html">Contact us 2</a></li>
                                         <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
                                         <li><a href="gallery.html">Gallery</a></li>
@@ -306,11 +306,11 @@
                                     <div class="inner">
 
                                         <div class="media">
-                                            <a href="product-details.html" class="image"><img src="{% static 'assets/images/products/product-1.jpg' %}" alt=""></a>
+                                            <a href="http://127.0.0.1:8000/productdetail" class="image"><img src="{% static 'assets/images/products/product-1.jpg' %}" alt=""></a>
                                             <a href="#" class="wishlist"><i class="default ion-android-favorite-outline"></i><i class="added ion-android-favorite"></i></a>
                                         </div>
                                         <div class="content">
-                                            <h4 class="title"><a href="product-details.html">Album</a></h4>
+                                            <h4 class="title"><a href="http://127.0.0.1:8000/productdetail">Album</a></h4>
                                             <span class="prices">
 											<span class="price-new">$15.00</span>
                                             </span>
@@ -625,11 +625,11 @@
                                     <div class="inner">
 
                                         <div class="media">
-                                            <a href="product-details.html" class="image"><img src="{% static 'assets/images/products/product-14.jpg' %}" alt=""></a>
+                                            <a href="http://127.0.0.1:8000/productdetail" class="image"><img src="{% static 'assets/images/products/product-14.jpg' %}" alt=""></a>
                                             <a href="#" class="wishlist active"><i class="default ion-android-favorite-outline"></i><i class="added ion-android-favorite"></i></a>
                                         </div>
                                         <div class="content">
-                                            <h4 class="title"><a href="product-details.html">T-Shirt</a></h4>
+                                            <h4 class="title"><a href="http://127.0.0.1:8000/productdetail">T-Shirt</a></h4>
                                             <span class="prices">
 											<span class="price-new">$18.00</span>
                                             </span>
@@ -647,11 +647,11 @@
                                     <div class="inner">
 
                                         <div class="media">
-                                            <a href="product-details.html" class="image"><img src="{% static 'assets/images/products/product-15.jpg' %}" alt=""></a>
+                                            <a href="http://127.0.0.1:8000/productdetail" class="image"><img src="{% static 'assets/images/products/product-15.jpg' %}" alt=""></a>
                                             <a href="#" class="wishlist"><i class="default ion-android-favorite-outline"></i><i class="added ion-android-favorite"></i></a>
                                         </div>
                                         <div class="content">
-                                            <h4 class="title"><a href="product-details.html">T-Shirt with Logo</a></h4>
+                                            <h4 class="title"><a href="http://127.0.0.1:8000/productdetail">T-Shirt with Logo</a></h4>
                                             <span class="prices">
 											<span class="price-new">$18.00</span>
                                             </span>
@@ -669,14 +669,14 @@
                                     <div class="inner">
 
                                         <div class="media">
-                                            <a href="product-details.html" class="image"><img src="{% static 'assets/images/products/product-4.jpg' %}" alt=""></a>
+                                            <a href="http://127.0.0.1:8000/productdetail" class="image"><img src="{% static 'assets/images/products/product-4.jpg' %}" alt=""></a>
                                             <span class="labels">
 											<span class="label label-hot">hot</span>
                                             </span>
                                             <a href="#" class="wishlist"><i class="default ion-android-favorite-outline"></i><i class="added ion-android-favorite"></i></a>
                                         </div>
                                         <div class="content">
-                                            <h4 class="title"><a href="product-details.html">V-Neck T-Shirt</a></h4>
+                                            <h4 class="title"><a href="http://127.0.0.1:8000/ productdetail">V-Neck T-Shirt</a></h4>
                                             <span class="prices">
 											<span class="price-new">$15.00 - $20.00</span>
                                             </span>
