--- a/projectgeneral/templates/about-us.html
+++ b/projectgeneral/templates/about-us.html
@@ -209,7 +209,7 @@
                                 <li><a href="case-results.html">Case Results</a></li>
                                 <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                     <ul class="sub-menu">
-                                        <li><a href="attorneys.html">Attorneys</a></li>
+                                        <li><a href="http://127.0.0.1:8000/attorneys">Attorneys</a></li>
                                         <li><a href="single-attorney.html">Single Attorney</a></li>
                                         <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
                                         <li><a href="careers.html">Careers</a></li>
@@ -224,10 +224,10 @@
                                 </li>
                                 <li class="menu-item-has-children"><a href="shop.html">Shop</a>
                                     <ul class="sub-menu">
-                                        <li><a href="shop.html">Shop</a></li>
+                                        <li><a href="http://127.0.0.1:8000/shop">Shop</a></li>
                                         <li><a href="shop-2-column.html">Shop 2 Column</a></li>
-                                        <li><a href="product-details.html">Product Details</a></li>
-                                        <li><a href="cart.html">Shopping Cart</a></li>
+                                        <li><a href="http://127.0.0.1:8000/productdetail">Product Details</a></li>
+                                        <li><a href="http://127.0.0.1:8000/cart">Shopping Cart</a></li>
                                         <li><a href="checkout.html">Checkout</a></li>
                                         <li><a href="login-register.html">Login & Register</a></li>
                                         <li><a href="my-account.html">My Account</a></li>
@@ -709,10 +709,10 @@
                         <ul class="footer-widget-link">
                             <li><a href="practice-areas-1.html">Practice Areas</a></li>
                             <li><a href="case-results.html">Case Results</a></li>
-                            <li><a href="about-us.html">Our Firm</a></li>
+                            <li><a href="http://127.0.0.1:8000/about">Our Firm</a></li>
                             <li><a href="careers.html">Careers</a></li>
-                            <li><a href="faq.html">F.A.Q</a></li>
-                            <li><a href="contact-us-1.html">Contact Us</a></li>
+                            <li><a href="http://127.0.0.1:8000/faq">F.A.Q</a></li>
+                            <li><a href="http://127.0.0.1:8000/contact">Contact Us</a></li>
                         </ul>
                     </div>
                     <!--Footer Widget End-->
