Changes on templates and models

--- a/projectgeneral/templates/index.html
+++ b/projectgeneral/templates/index.html
@@ -299,9 +299,7 @@
                     </div>
 
                     <div class="col-lg-auto col-12">
-                        <div class="intro-button">
-                            <a href="practice-areas-1" class="btn btn-primary">CHECK OUR PRACTICES</a>
-                        </div>
+                        
                     </div>
 
                 </div>
@@ -309,119 +307,13 @@
         </div>
         <!--Intro Section End-->
 
-        <!--Practice Section Start-->
-        <div class="section section-padding">
-            <div class="container">
-
-                <div class="section-title">
-                    <h2 class="title">LEGAL PRACTICE AREAS</h2>
-                </div>
-
-                <div class="row mbn-30">
-
-                    <!--Practice One Start-->
-                    <div class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-30">
-                        <div class="practice-1">
-                            <a class="inner" href="practice-car-accident" data-bg-image="{% static 'assets/images/practice/practice-1.jpg' %}">
-                                <div class="icon"><i class="tmlawyer-car"></i></div>
-                                <h4 class="title">Car Accident</h4>
-                            </a>
-                        </div>
-                    </div>
-                    <!--Practice One End-->
-
-                    <!--Practice One Start-->
-                    <div class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-30">
-                        <div class="practice-1">
-                            <a class="inner" href="practice-bank-financial" data-bg-image="{% static 'assets/images/practice/practice-2.jpg' %}">
-                                <div class="icon"><i class="tmlawyer-money"></i></div>
-                                <h4 class="title">Bank & Financial</h4>
-                            </a>
-                        </div>
-                    </div>
-                    <!--Practice One End-->
-
-                    <!--Practice One Start-->
-                    <div class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-30">
-                        <div class="practice-1">
-                            <a class="inner" href="practice-personal-injury" data-bg-image="{% static 'assets/images/practice/practice-3.jpg' %}">
-                                <div class="icon"><i class="tmlawyer-square"></i></div>
-                                <h4 class="title">Personal Injury</h4>
-                            </a>
-                        </div>
-                    </div>
-                    <!--Practice One End-->
-
-                    <!--Practice One Start-->
-                    <div class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-30">
-                        <div class="practice-1">
-                            <a class="inner" href="practice-family-law" data-bg-image="{% static 'assets/images/practice/practice-4.jpg">
-                                <div class="icon"><i class="tmlawyer-star"></i></div>
-                                <h4 class="title">Family Law</h4>
-                            </a>
-                        </div>
-                    </div>
-                    <!--Practice One End-->
-
-                    <!--Practice One Start-->
-                    <div class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-30">
-                        <div class="practice-1">
-                            <a class="inner" href="practice-capital-market" data-bg-image="{% static 'assets/images/practice/practice-5.jpg">
-                                <div class="icon"><i class="tmlawyer-docs"></i></div>
-                                <h4 class="title">Capital Market</h4>
-                            </a>
-                        </div>
-                    </div>
-                    <!--Practice One End-->
-
-                    <!--Practice One Start-->
-                    <div class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-30">
-                        <div class="practice-1">
-                            <a class="inner" href="practice-employment-law" data-bg-image="{% static 'assets/images/practice/practice-6.jpg">
-                                <div class="icon"><i class="tmlawyer-book"></i></div>
-                                <h4 class="title">Employment Law</h4>
-                            </a>
-                        </div>
-                    </div>
-                    <!--Practice One End-->
-
-                    <!--Practice One Start-->
-                    <div class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-30">
-                        <div class="practice-1">
-                            <a class="inner" href="practice-corporate" data-bg-image="{% static 'assets/images/practice/practice-7.jpg">
-                                <div class="icon"><i class="tmlawyer-key"></i></div>
-                                <h4 class="title">Corporate</h4>
-                            </a>
-                        </div>
-                    </div>
-                    <!--Practice One End-->
-
-                    <!--Practice One Start-->
-                    <div class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-30">
-                        <div class="practice-1">
-                            <a class="inner" href="practice-dispute-resolution" data-bg-image="{% static 'assets/images/practice/practice-8.jpg">
-                                <div class="icon"><i class="tmlawyer-eight"></i></div>
-                                <h4 class="title">Dispute Resolution</h4>
-                            </a>
-                        </div>
-                    </div>
-                    <!--Practice One End-->
-
-                </div>
-
-            </div>
-        </div>
-        <!--Practice Section End-->
-
+        
         <!--CTA Section Start-->
         <div class="cta-section-1 section" data-bg-image="{% static 'assets/images/bg/cta-bg-1.jpg">
             <div class="container">
                 <div class="row">
 
-                    <div class="cta-content col-md-auto col-12 ml-auto mr-lg-5">
-                        <h2 class="title">Pay nothing <span class="font-heading text-primary">unless</span> <br> we <span class="text-small text-primary">win</span> the case.</h2>
-                    </div>
-
+                   
                 </div>
             </div>
         </div>
@@ -493,7 +385,7 @@
                             <div class="about-content text-center">
                                 <p>The Lawyer Attorneys Firm is a general practice firm that has been serving individuals and business for over twenty years.</p>
                                 <p>Our personal injury lawyers are dedicated solely to representing people who have experienced the catastrophic injuries</p>
-                                <a href="about-us" class="btn btn-primary">about us</a>
+                                <a href="http://localhost:8000/about" class="btn btn-primary">about us</a>
                             </div>
 
                         </div>
@@ -896,7 +788,7 @@
                     <div class="footer-widget col-lg-3 col-md-6 col-12">
                         <h4 class="footer-widget-title">EXPLORE OUR SITE</h4>
                         <ul class="footer-widget-link">
-                            <li><a href="practice-areas-1">Practice Areas</a></li>
+                            
                             <li><a href="case-results">Case Results</a></li>
                             <li><a href="http://localhost:8000/about">Our Firm</a></li>
                             <li><a href="careers">Careers</a></li>
