--- a/projectgeneral/templates/index.html
+++ b/projectgeneral/templates/index.html
@@ -85,7 +85,7 @@
                     <div class="primary-menu">
                         <nav>
                             <ul>
-                                <li class="menu-item-has-children"><a href="http://localhost:8000">Home</a>
+                                <li class="menu-item-has-children"><a href="http://localhost:8000/">Home</a>
                                    
                                 </li>
                                 
