--- a/projectgeneral/templates/shop.html
+++ b/projectgeneral/templates/shop.html
@@ -325,14 +325,14 @@
                                     <div class="inner">
 
                                         <div class="media">
-                                            <a href="product-details.html" class="image"><img src="{% static 'assets/images/products/product-2.jpg' %}" alt=""></a>
+                                            <a href="home/productdetail" class="image"><img src="{% static 'assets/images/products/product-2.jpg' %}" alt=""></a>
                                             <span class="labels">
 											<span class="label label-sale">sale</span>
                                             </span>
                                             <a href="#" class="wishlist"><i class="default ion-android-favorite-outline"></i><i class="added ion-android-favorite"></i></a>
                                         </div>
                                         <div class="content">
-                                            <h4 class="title"><a href="product-details.html">Beanie</a></h4>
+                                            <h4 class="title"><a href="home/productdetail">Beanie</a></h4>
                                             <span class="prices">
 											<span class="price-old">$20.00</span>
                                             <span class="price-new">$18.00</span>
